--- a/test.html
+++ b/test.html
@@ -3,8 +3,8 @@
  </head>
  <body>
   <script src="https://www.puck-js.com/puck.js"></script>
-  <button onclick="Puck.write('LED1.set();\n');">On!</button>
-  <button onclick="Puck.write('LED1.reset();\n');">Off!</button>
-  <p>Puck.Write('E.getTemperature();\n')</p>
+  <button onclick="Puck.write('LED2.set();\n');">On!</button>
+  <button onclick="Puck.write('LED2.reset();\n');">Off!</button>
+  <button onclick="Puck.Write('E.getTemperature();\n')">Temperature</button>
  </body>
 </html>
