--- a/test.html
+++ b/test.html
@@ -5,6 +5,6 @@
   <script src="https://www.puck-js.com/puck.js"></script>
   <button onclick="Puck.write('LED2.set();\n');">On!</button>
   <button onclick="Puck.write('LED2.reset();\n');">Off!</button>
-  <button onclick="Puck.Write('E.getTemperature();\n')">Temperature</button>
+  <button onclick="Puck.write('E.getTemperature();\n');">Temperature</button>
  </body>
 </html>
